--- a/src/Gemini.Modules.Xna/Gemini.Modules.Xna.csproj
+++ b/src/Gemini.Modules.Xna/Gemini.Modules.Xna.csproj
@@ -27,6 +27,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
