--- a/src/Gemini/packages.config
+++ b/src/Gemini/packages.config
@@ -6,5 +6,6 @@
   <package id="Gu.Localization" version="6.2.0.0" targetFramework="net461" />
   <package id="Gu.Wpf.Localization" version="6.2.0.0" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
+  <package id="NLog" version="4.4.12" targetFramework="net461" />
   <package id="Xceed.Wpf.AvalonDock.Themes.VS2013" version="2.9.0.1" targetFramework="net461" />
 </packages>
