--- a/src/Gemini/app.config
+++ b/src/Gemini/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -18,6 +18,10 @@
             </setting>
         </Gemini.Properties.Settings>
     </userSettings>
+    <appSettings>
+        <add key="Gemini_Settings_ThemeName_PreventEditing" value="False" />
+        <add key="Gemini_Settings_LanguageCode_PreventEditing" value="False" />
+    </appSettings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
