--- a/src/Gemini.Modules.Inspector/Gemini.Modules.Inspector.csproj
+++ b/src/Gemini.Modules.Inspector/Gemini.Modules.Inspector.csproj
@@ -73,6 +73,10 @@
       <DependentUpon>BitmapSourceEditorView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Inspectors\EnumValueViewModel.cs" />
+    <Compile Include="Inspectors\InspectorListEditorView.xaml.cs">
+      <DependentUpon>InspectorListEditorView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Inspectors\InspectorListEditorViewModel.cs" />
     <Compile Include="Inspectors\ResetObjectValueAction.cs" />
     <Compile Include="Inspectors\ChangeObjectValueAction.cs" />
     <Compile Include="Inspectors\CheckBoxEditorView.xaml.cs">
@@ -160,6 +164,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Inspectors\EnumEditorView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Inspectors\InspectorListEditorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
