--- a/src/Gemini.Modules.Inspector/Gemini.Modules.Inspector.csproj
+++ b/src/Gemini.Modules.Inspector/Gemini.Modules.Inspector.csproj
@@ -73,10 +73,10 @@
       <DependentUpon>BitmapSourceEditorView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Inspectors\EnumValueViewModel.cs" />
-    <Compile Include="Inspectors\FileInfoEditorView.xaml.cs">
-      <DependentUpon>FileInfoEditorView.xaml</DependentUpon>
+    <Compile Include="Inspectors\FilePathEditorView.xaml.cs">
+      <DependentUpon>FilePathEditorView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Inspectors\FileInfoEditorViewModel.cs" />
+    <Compile Include="Inspectors\FilePathEditorViewModel.cs" />
     <Compile Include="Inspectors\InspectorListEditorView.xaml.cs">
       <DependentUpon>InspectorListEditorView.xaml</DependentUpon>
     </Compile>
@@ -171,7 +171,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Inspectors\FileInfoEditorView.xaml">
+    <Page Include="Inspectors\FilePathEditorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
